# ES8-Project

./: .gitignore  README.md
simulator/: Makefile  README.md  event_simulation.py  event_simulation_results.csv  gateway_placements.json  notes.md  pyproject.toml  scalene-profile.html  scalene-profile.json  test_output.txt
simulator/doc/: .$simulator.drawio.bkp  README.md  simulator.drawio
simulator/maps/: circle.json  final_boss.json  intersection.json  long_line.json  medium_line.json  mega_line.json  small_line.json  small_line_all_gateway_connected.json  y.json
simulator/small_prototypes/: colision.py  copy_test.py  drift_parser.py  line_json_gen.py  queue_test.py  slot_select.py  visualize_map.py
simulator/src/: IDevice.py  Interfaces.py  custom_types.py  loraWanFrameHelper.py  main.py  payload_types.py  profile_code.py
simulator/src/WDST.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simulator/src/gateway/: gateway.py
simulator/src/logger/: ILogger.py  simple_logger.py  threaded_logger.py
simulator/src/medium/: base_medium.py  lora_d2d_medium.py  lora_wan_medium.py  (+1 more)
simulator/test/: test_battery.py  test_bfs_topology_equivalence.py  test_clock.py  test_custom_types.py  test_engine.py  test_engine_run.py  test_event_net_queue.py  test_gateway.py  test_global_time.py  test_gui_process.py  test_hop_count_engine.py  test_injection_e2e.py  test_injection_topologies.py  test_logger.py  test_lora_d2d_medium.py  test_megasync_protocol.py  test_network_topology_loader.py  test_slot_collision.py  test_transceiver.py  test_v02_deduplication.py
(+121 files in other folders)
